light/dark mode fixes

--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ button {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #dabc94;
   }
   a:hover {
     color: #747bff;
